# iLabMap

./: .replit  add_sample_data.py  app.py  backup_db.py  chat.py  check_image_paths.py  config.py  main.py  models.py  package-lock.json  package.json  provision_maps.py  pyproject.toml  requirements.txt  routes.py  routes2.py  script2.js  test.py  update_maps.py  utils.py  verify_map_data.py
migrations/versions/: 3bb35bb39457_add_map_id_to_item_model.py  5db8e7ec38e6_add_background_color_to_map_model.py  7ff64898908d_add_more_keys.py  c4998c991b24_add_image_path_to_item_model.py  e94892c1aa38_add_description_and_link_fields_to_item_.py
static/: model.glb  model.gltf
static/css/: styles.css
static/js/: script.js
templates/: 3d.html  admin.html  chat.html  index.html  login.html
